# SIR

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benchmarks/: PRE-PACKAGING-BASELINE.md  after.json  baseline.json  baseline.md  optimization.md  post-combined-pass.json  post-combined-pass.md  pre-combined-pass.json  pre-combined-pass.md
docs/SIR-Vault/: 00 - SIR Home.md  Graph View Guide.md  Unresolved Questions.md
docs/SIR-Vault/.obsidian/: graph.json
docs/SIR-Vault/01 - Architecture/: AT-SPI Integration.md  Cache and Enumeration.md  Error Model.md  Event Processing.md  MCP Interface.md  Process and Connection Model.md  Reconnection.md  Resolution and References.md  System Overview.md  Timeout Model.md
docs/SIR-Vault/02 - Modules/: Module - accessibility.md  Module - actions.md  Module - cache.md  Module - main.md  Module - mcp.md  Module - resolver.md  Module - types.md
docs/SIR-Vault/03 - Symbols/: Symbols Overview.md
docs/SIR-Vault/04 - Execution Flows/: Flow - App Restart Recovery.md  Flow - Bus Restart Recovery.md  Flow - Cache Invalidation.md  Flow - Dual Connection Architecture.md  Flow - Event Processing.md  Flow - MCP Request Handling.md  Flow - Press Action.md  Flow - Startup and Initial Enumeration.md  (+2 more)
scripts/: build-all.sh  deploy-pi.sh  package-deb.sh
src/: accessibility.rs  actions.rs  cache.rs  main.rs  mcp.rs  resolver.rs  types.rs
test/: bench.py  bench2.py  bus_restart.py  chromium-test.html  electron-main.js  gen_symbols.py  harness.sh  mcp-smoke.sh  probe_ff.py  qt-test-app.py  suite.py  test-app.py
(+117 files in other folders)
